# vpn-simulator-v2

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PLAN_ENHANCEMENT.md  PLAN_ENHANCEMENT_V2.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/iot/: devices.yaml
config/learning/: faq.yaml  learning_paths.yaml  rfc_references.yaml
config/scenarios/: presets.yaml
config/scenarios/automation/: l2tp_basic.yaml  pptp_basic.yaml
config/tutorials/: ikev2_basics.yaml  ipsec_basics.yaml  l2tp_basics.yaml  openconnect_basics.yaml  openvpn_basics.yaml  pptp_basics.yaml  sstp_basics.yaml  vxlan_basics.yaml  wireguard_basics.yaml
docker/: Dockerfile  docker-compose.yml
src/plugins/attacks/: __init__.py
src/plugins/faults/: __init__.py
src/vpn_simulator/api/: app.py  websocket.py
src/vpn_simulator/cli/: __init__.py  __main__.py  utils.py
src/vpn_simulator/core/: __init__.py  config.py  database.py  events.py  platform.py
src/vpn_simulator/domain/: __init__.py  attack.py  benchmark.py  connection.py  fault.py  packet.py  packet_fields.py  protocol.py  scenario.py  tutorial.py
tests/: conftest.py  test_scenario.py
tests/e2e/: test_module_integration.py
tests/integration/: test_api.py  test_api_comprehensive.py  test_cli.py  test_cli_comprehensive.py  test_cli_scenario_automation.py
tests/unit/: test_attack_service.py  test_auth_middleware.py  test_benchmark_cli.py  test_benchmark_service.py  test_cli_commands_mock.py  test_cli_main.py  test_cli_utils.py  test_comparison_service.py  test_config.py  test_connection.py  test_connection_service.py  test_database.py  test_dpi_service.py  test_events.py  test_fault.py  test_fault_service.py  test_iot_service.py  test_learning.py  test_metrics.py  test_obfuscation.py  test_packet_parser.py  test_packet_parser_extended.py  test_platform.py  test_platform_adapters.py  test_plugin_context.py  test_plugin_loader.py  test_plugin_registry.py  test_protocol_service.py  test_protocol_state_machine.py  test_scenario_engine.py  test_scenario_engine_extended.py  test_scenario_service.py  test_traffic_service.py  test_tutorial.py  test_vendor_cli_service.py  test_voice_service.py  test_websocket.py
web-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  i18n.ts  index.css
(+161 files in other folders)
