[tool.poetry]
name = "vpn-simulator"
version = "2.0.0"
description = "VPN Protocol Simulator - Teaching, Testing, and Research Platform"
authors = ["VPN Simulator Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/vpn-simulator/vpn-simulator"
repository = "https://github.com/vpn-simulator/vpn-simulator"
keywords = ["vpn", "network", "simulator", "testing", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
click = "^8.1.7"
rich = "^13.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
aiosqlite = "^0.19.0"
psutil = "^5.9.7"
structlog = "^24.1.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
httpx = "^0.26.0"
python-multipart = "^0.0.6"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
ruff = "^0.1.9"
black = "^24.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
vpn-simulator = "vpn_simulator.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
known_first_party = ["vpn_simulator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
